--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "在线电子书",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+     "int-test": "mocha --require babel-core/register --recursive test"
+
   },
   "repository": {
     "type": "git",
